# robotics_exercises

./: LICENSE  README.md  thirdparty.repos
bumper/: package.xml
bumper/include/bumper/: bumperNode.hpp
camera/: CMakeLists.txt  package.xml
camera/include/camera/: HSVFilterNode.hpp  YoloDetectionNode.hpp
camera/launch/: camera.launch.py  yolo_detection.launch.py
camera/src/camera/: DetectionTo3DfromDepthNode.cpp  HSVFilterNode.cpp
follow_ball/: README.md  package.xml
follow_ball/src/: main_follow_ball.cpp
follow_person/: README.md
follow_person/include/follow_person/: PersonFollowerNode.hpp
follow_person/launch/: lc.launch.py  perception.launch.py
follow_person/src/: detection_tf_publisher_main.cpp
follow_person/src/follow_person/: DetectionTfPublisher.cpp  PersonFollowerNodeLC.cpp
go_fwd/src/go_fwd/: goFwdNode.cpp
laser/include/laser/: ObstacleDetectorNode.hpp
laser/launch/: laser.launch.py
laser/src/laser/: ObstacleDetectorNode.cpp
manejo/: README.md
p2_bumper/: CMakeLists.txt  README.md
p2_bumper/src/: bumper.cpp
p2_bumper/src/bumper/: bumperNode.cpp
p3_go_fwd/: CMakeLists.txt  README.md  package.xml
p3_go_fwd/include/go_fwd/: goFwdNode.hpp
p3_go_fwd/src/: go_fwd.cpp
p4_acciones/: README.md
p4_acciones/p4_interfaces/: CMakeLists.txt  package.xml
p4_acciones/p4_interfaces/action/: Move.action
p4_acciones/p4_nodes/: CMakeLists.txt  package.xml
p4_acciones/p4_nodes/src/: node_client.cpp  node_server.cpp
p5_follow_ball/: CMakeLists.txt  README.md
p5_follow_ball/include/principal/: CenterNode.hpp
p5_follow_ball/src/follow_ball/: FollowNode.cpp
p6_follow_person/: CMakeLists.txt  package.xml
p6_follow_person/config/: params.yaml  params_sim.yaml
p6_follow_person/include/follow_person/: DetectionTfPublisher.hpp  PIDController.hpp  PersonFollowerNodeLC.hpp
p6_follow_person/launch/: follow.launch.py
p6_follow_person/src/: person_follower_lc_main.cpp  person_follower_main.cpp
p6_follow_person/src/follow_person/: PIDController.cpp  PersonFollowerNode.cpp
support_pkgs/camera/config/: params.yaml
support_pkgs/camera/include/camera/: DetectionTo3DfromDepthNode.hpp
support_pkgs/camera/launch/: detection3d_hsv.launch.py  detection3d_yolo.launch.py
support_pkgs/camera/src/camera/: DetectionTo3DfromPCNode.cpp  YoloDetectionNode.cpp
