<?xml version="1.0"?>
<package format="3">
  <name>p4_nodes</name>
  <version>0.0.1</version>
  <description>Client-server using actions</description>
  <maintainer email="josemiguel.guerrero@urjc.es">Jose Miguel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>p4_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
